# p2ptexter

./: .gitignore  Cargo.toml  build-android.sh  build.sh  client_log.txt  run-fix.sh  secret.key  test_relay.sh
bootstrap_server/: Cargo.toml  p2p_identity.key  secret.key  server_log.txt
bootstrap_server/src/: main.rs  relay.rs  test_p2p.rs
relay-server/: Cargo.toml
relay-server/src/: main.rs
src/: main.rs
src-tauri/: Cargo.toml  client_log.txt  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/permissions/: main.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cli/: p2p_cli.rs  tester.rs
ui/: index.html  main.js  style.css
