[package]
name = "bootstrap_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[[bin]]
name = "relay"
path = "src/relay.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
libp2p = { version = "0.53", features = ["tcp", "tls", "quic", "noise", "yamux", "relay", "kad", "identify", "autonat", "tokio", "macros"] }
futures = "0.3"
[profile.release]
codegen-units = 16
panic = "abort"
lto = "thin"
