[package]
name = "app"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "tester"
path = "src/cli/tester.rs"

[[bin]]
name = "p2p_cli"
path = "src/cli/p2p_cli.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
libp2p = { version = "0.56.0", features = ["tcp", "dns", "noise", "yamux", "kad", "tokio", "macros", "gossipsub", "relay", "dcutr", "autonat", "identify", "ping", "quic", "request-response", "json", "serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
